# mypdfwrapper

./: .env  .gitignore  pyproject.toml
src/mypdfwrapper/: __init__.py  pdf_extractor.py
