[project]
name = "mypdfwrapper"
version = "0.1.0"
description = "PDF extraction wrapper built on PyMuPDF"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypdfwrapper"]